    (acmurthy)

    MAPREDUCE-5260. Fix JvmManager to deal better with corner-cases in
    shutting down. (zhaoyunjiong via acmurthy) 

    MAPREDUCE-5318. Escape ampersand in JSPUtil. (Bohou Li via acmurthy)

    HADOOP-9665. Fixed BlockDecompressorStream#decompress to return -1 rather
    than throw EOF at end of file. (Zhijie Shen via acmurthy)

Release 1.2.0 - 2013.05.05

  INCOMPATIBLE CHANGES

    HDFS-4350. Make enabling of stale marking on read and write paths
    independent. (Andrew Wang via suresh)

  NEW FEATURES

    HADOOP-8817. Backport Network Topology Extension for Virtualization 
    (from HADOOP-8468) to branch-1

    MAPREDUCE-4660. Update task placement policy for network topology
    with node group. (Junping Du via llu)

    HADOOP-8023. Add unset() method to Configuration (tucu)

    MAPREDUCE-4355. Add RunningJob.getJobStatus() (kkambatl via tucu)

    MAPREDUCE-987. Exposing MiniDFS and MiniMR clusters as a single process 
    command-line (philip and ahmed via tucu)

    HDFS-385. Backport: Add support for an experimental API that allows a
    module external to HDFS to specify how HDFS blocks should be placed.
    (Sumadhur Reddy Bolli via szetszwo)

    HADOOP-7754. Expose file descriptors from Hadoop-wrapped local 
    FileSystems (todd and ahmed via tucu)

    MAPREDUCE-461. Enable service-plugins for JobTracker. (Fredrik Hedberg and
    Brandon Li via vinodkv)

    HDFS-3912. Detect and avoid stale datanodes for writes.
    (Jing Zhao via suresh)

    HADOOP-8988. Allow configuration of authorization for JmxJsonServlet and 
    MetricsServlet. (tucu, Jing Zhao via suresh)

    HADOOP-8820. Backport HADOOP-8469 and HADOOP-8470: Make NetworkTopology
    class pluggable and add NetworkTopologyWithNodeGroup, a 4-layer
    implementation of NetworkTopology.  (Junping Du and Jing Zhao via szetszwo)

    HDFS-3941. Backport HDFS-3498 and HDFS-3601: Support replica removal in